- Changelog -

Key:
* Means modification
+ Means addition
- Means deletion

Version 2.0.4:
* Fixed a bug preventing the module from loading on Python 3.5
* Lots of code cleanup
* Moved tests onto GNU make
* Added semicolon dividers

Version 2.0.3:
* Updated flake8 to the latest version
* Updated documentation config
+ Added suggested extensions in VSCode
- Deactivated wikis

Version 2.0.2:
* Updated package build tools
* Updated EditorConfig
* Updated GitIgnore
* Updated support information
* Updated issue templates
* Updated Probot config
* VSCode now suggests you install markdown lint
* Updated contributing guidelines
* Updated twine to latest version

Version 2.0.1:
+ Added new 6 dividers
* Cleaned up docs
- Removed egg building tool
* Updated CodeOwners
* Made code follow PyDocStyle
* Removed Travis CI, moved on to Cirrus CI
* Updated GitIgnore
* Updated MarkdownLint rules
* Added dependency bumping bot

Version 2.0.0 (contains VERY BREAKING changes):
* Completely changed the divider addition system
* Removed most of the GitHub apps, added new ones
* Redid docs
+ Gave the util module its own package so the import system isn't really odd
* Updated GitIgnore
* Made the main module class based ( /!\ VERY BREAKING CHANGES ALERT /!\ )
* Made sure the wheel is not built universally
* Added actual code testing with Travis CI
+ Added build tools
- Removed VCS lists
* Updated the contributing guidelines
+ Added markdown linting

Version 1.3.0:
* Fixed issues with package info function
* Moved check function to util module
* Documented check function
* Updated Stale bot config
* Reformatted changelog
+ Added some VCS stuff

Version 1.2.9:
* EditorConfig file now included in sdists
* Updated author Email

Version 1.2.8:
* Re-did all the docs
+ Added link check task for markdown files
* Made almost all code fit PEP8

Version 1.2.7:
+ Added potato dividers
+ Added shrimp dividers
+ Added an EditorConfig
+ Added Other OS classifier